--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "firebase": "^7.13.2",
     "hamburgers": "^1.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
